package ar.edu.utn.frba.dds.metamapa_client.dtos.usuarios;

public enum Rol {
  CONTRIBUYENTE,
  ADMINISTRADOR
}
