@startuml
'https://plantuml.com/class-diagram

class Hecho {
    - Long id
    - String titulo
    - String descripcion
    - Categoria categoria
    - Ubicacion ubicacion
    - LocalDate fechaAcontecimiento
    - LocalDate fechaCarga
    - Origen origen
    - boolean eliminado
    - Usuario usuario
    - String nombreArchivo
    - Boolean entregadoAAgregador
    + marcarEntregadoAAgregador();
}

class Ubicacion {
    - Float longitud
    - Float latitud
}

class Categoria {
    -private String nombre;
    +public boolean esIgualA(Categoria);
}

enum Origen {
  PORDATASET,
  PORCONTRIBUYENTE,
  CARGAMANUAL,
}

Hecho --> Ubicacion
Hecho --> Categoria
Hecho --> Origen


enum Rol {
  ADMINISTRADOR,
  CONTRIBUYENTE
}
enum Permiso {
  CREARCOLECCION,
  MODIFICARCOLECCION,
  ELIMINARCOLECCION,
  VISITARESTADISTICAS,
  MODIFICARHECHO,
  REVISARHECHO,
  REVISARSOLICITUD,
  SUBIDAARCHIVO
}


class Usuario {
      - Long id;
      - String email;
      - String nombre;
      - String apellido;
      - Rol rol;
      - List<Permiso> permisos;
}

Usuario --> Rol
Usuario --> "*" Permiso
Hecho --> Usuario
@enduml